force-app/main/default/objects/FeatureCatalog__mdt/FeatureCatalog__mdt.object-meta.xml
<CustomObject>
    <description>Used to create entitlements and response payloads</description>
    <label>Feature Catalog</label>
    <pluralLabel>FeatureCatalog</pluralLabel>
</CustomObject>