force-app/main/default/objects/FeatureCatalog__mdt/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <label>Billable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>