force-app/main/default/objects/FeatureCatalog__mdt/fields/DefaultEnabled__c.field-meta.xml
<CustomField>
    <fullName>DefaultEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Enabled</label>
    <type>Checkbox</type>
</CustomField>