force-app/main/default/objects/FeatureCatalog__mdt/fields/FeatureCode__c.field-meta.xml
<CustomField>
    <fullName>FeatureCode__c</fullName>
    <label>Feature Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>